--- a/trip_sharing-frontend/src/containers/Trip_page/index.css
+++ b/trip_sharing-frontend/src/containers/Trip_page/index.css
@@ -1,6 +1,7 @@
 .TripPage-body {
   width: 80%;
   margin: auto;
+  margin-bottom: 300px;
   padding: 15px;
-  background-color: bisque;
+  background-color: azure;
 }
