Changing SearchList component - add SearchList_Item

--- a/trip_sharing-frontend/src/containers/SearchList_item/index.css
+++ b/trip_sharing-frontend/src/containers/SearchList_item/index.css
@@ -16,4 +16,11 @@
 
 .SearchList-description {
   width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.SearchList-description p{
+  width: 100%;
 }
