--- a/trip_sharing-frontend/src/containers/EditTrip_page/index.css
+++ b/trip_sharing-frontend/src/containers/EditTrip_page/index.css
@@ -3,8 +3,7 @@
   margin: auto;
   margin-top: 30px;
   display: flex;
-  justify-content: space-between;
-  align-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 
