--- a/trip_sharing-frontend/src/components/CoverPhoto/index.css
+++ b/trip_sharing-frontend/src/components/CoverPhoto/index.css
@@ -1,4 +1,4 @@
-.TripCoverPhoto {
+.CoverPhoto {
   width: 80%;
   margin: auto;
   display: flex;
@@ -8,7 +8,7 @@
   margin-bottom: 30px;
 }
 
-.TripCoverPhoto h1 {
+.CoverPhoto h1 {
   background-color: white;
   border-radius: 30px;
   opacity: 0.8;
@@ -18,7 +18,7 @@
   align-items: center;
 }
 
-.TripCoverPhoto h3 {
+.CoverPhoto h3 {
   background-color: white;
   display: flex;
   justify-content: flex-end;
@@ -28,5 +28,10 @@
   opacity: 0.8;
   padding: 5px 15px;
   border-radius: 10px; 
+}
+
+.CoverPhoto a {
+  color: black;
+  text-decoration: none; 
 }
 
