--- a/trip_sharing-frontend/src/containers/EditTrip_page/index.css
+++ b/trip_sharing-frontend/src/containers/EditTrip_page/index.css
@@ -12,7 +12,7 @@
   padding: 0 10px;
   clear: both;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
   flex-wrap: wrap
 }
@@ -22,4 +22,20 @@
   justify-content: space-around;
   margin: 50px;
   padding: 0 100px
+}
+
+.Edit-general {
+  padding: 20px;
+  margin: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap
+}
+
+.Edit-places, .Edit-additional {
+  padding: 20px;
+  margin: 20px;
+  width: 42%;
 }
