--- a/trip_sharing-frontend/src/containers/UserCard/index.css
+++ b/trip_sharing-frontend/src/containers/UserCard/index.css
@@ -18,12 +18,17 @@
   width: 70%;
   cursor: pointer;
   display: flex;
+  /* flex-direction: column; */
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
 
 .UserCard-userInfo h2 {
+  width: 100%;
+}
+
+.UserCard-tripsList h2 {
   width: 100%;
 }
 
